[refactoring] made things more clear

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   ],
   "description": "Its a mustache templating engine, which is optimized for recompiling. The parser returns a tree of blocks with each variable dependency",
   "main": [
-    "compiler.js"
+    "tempart.js"
   ],
   "moduleType": [
     "globals",
