[api] changed some stuff

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tempart",
   "version": "0.2.4",
   "description": "Its a mustache templating engine, which is optimized for recompiling. The parser returns a tree of blocks with each variable dependency",
-  "main": "parser.js",
+  "main": "src/parser/parser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
