--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tempart",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Its a mustache templating engine, which is optimized for recompiling. The parser returns a tree of blocks with each variable dependency",
   "main": "src/parser/parser.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jshint --show-non-errors src && ./node_modules/karma/bin/karma start karma.conf.js --no-auto-watch --single-run"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "url": "https://github.com/plusgut/tempart/issues"
   },
   "jshintConfig": {
+    "node": true,
     "esversion": 6,
     "loopfunc": true,
     "unused": true,
@@ -29,5 +30,13 @@
     "eqeqeq": true,
     "forin": true
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "load-grunt-tasks": "^3.5.0"
+  }
 }
