--- a/package.json
+++ b/package.json
@@ -34,14 +34,19 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "grunt": "^1.0.1",
+    "grunt-amdclean": "https://github.com/plusgut/grunt-amdclean.git",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "load-grunt-tasks": "^3.5.0",
+    "grunt-githooks": "^0.6.0",
+    "grunt-touch": "^1.0.0",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "karma-phantomjs-launcher": "^1.0.0",
+    "load-grunt-tasks": "^3.5.0"
   }
 }
