--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-githooks": "^0.6.0",
+    "grunt-string-replace": "^1.3.1",
     "grunt-touch": "^1.0.0",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
