--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "grunt-githooks": "^0.6.0",
     "grunt-string-replace": "^1.3.1",
     "grunt-touch": "^1.0.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
