--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "forin": true
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "grunt": "^1.0.1",
