--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
+    "browserify": "^14.3.0",
     "grunt": "^1.0.1",
     "grunt-amdclean": "https://github.com/plusgut/grunt-amdclean.git",
     "grunt-babel": "^6.0.0",
@@ -47,12 +48,20 @@
     "grunt-githooks": "^0.6.0",
     "grunt-string-replace": "^1.3.1",
     "grunt-touch": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-util": "^3.0.8",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "load-grunt-tasks": "^3.5.0"
+    "karma-typescript": "^3.0.1",
+    "load-grunt-tasks": "^3.5.0",
+    "tsify": "^3.0.1",
+    "typescript": "^2.3.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   }
 }
