--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Its a mustache templating engine, which is optimized for recompiling. The parser returns a tree of blocks with each variable dependency",
   "main": "dist/tempart.min.js",
   "scripts": {
-    "test": "jshint --show-non-errors src && jscs src && grunt default &&./node_modules/karma/bin/karma start karma.conf.js --no-auto-watch --single-run"
+    "test": "gulp default &&./node_modules/karma/bin/karma start karma.conf.js --no-auto-watch --single-run"
   },
   "repository": {
     "type": "git",
@@ -32,22 +32,7 @@
     "varstmt": true
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
     "browserify": "^14.3.0",
-    "grunt": "^1.0.1",
-    "grunt-amdclean": "https://github.com/plusgut/grunt-amdclean.git",
-    "grunt-babel": "^6.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-coveralls": "^1.0.1",
-    "grunt-githooks": "^0.6.0",
-    "grunt-string-replace": "^1.3.1",
-    "grunt-touch": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
     "gulp-util": "^3.0.8",
