[name] namechanges, from plusgut to plusnew

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "tempart",
   "version": "0.4.0",
-  "homepage": "https://github.com/plusgut/tempart",
+  "homepage": "https://github.com/plusnew/tempart",
   "authors": [
     "plusgut <github@webentwickler2-0.de>"
   ],
