--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/plusgut/tempart.git"
+    "url": "git://github.com/plusnew/tempart.git"
   },
   "keywords": [
     "template",
@@ -18,7 +18,7 @@
   "author": "Carlo Jeske",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/plusgut/tempart/issues"
+    "url": "https://github.com/plusnew/tempart/issues"
   },
   "devDependencies": {
     "browserify": "^14.3.0",
