--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,6 @@ after_success:
 notifications:
   email:
     recipients:
-      - travis@snew.io
+      - travis@plusnew.io
     on_success: change
     on_failure: always
